GNOME Bugzilla – Bug 728952
Ignore '/' at beginning of REST function
Last modified: 2014-08-26 09:17:47 UTC
Created attachment 275127 [details] [review] Ignore '/' at beginning of REST function Not fully sure about this change, maybe I'm just misusing librest API.
Review of attachment 275127 [details] [review]: ack